--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "dayjs": "^1.10.5",
     "element-plus": "^1.0.2-beta.46",
     "vue": "^3.0.5"
